--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/node": "20.6.2",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,6 +48,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
@@ -55,6 +57,7 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
